Lib/AlternateWrapper/NaroOccCore/NaroOccCore/Occ/V3d/V3dViewer.h

extern "C" DECL_EXPORT bool V3d_Viewer_DefaultComputedMode(void* instance);
extern "C" DECL_EXPORT bool V3d_Viewer_IsActive(void* instance);
extern "C" DECL_EXPORT void* V3d_Viewer_Grid(void* instance);
extern "C" DECL_EXPORT int V3d_Viewer_GridType(void* instance);
extern "C" DECL_EXPORT int V3d_Viewer_GridDrawMode(void* instance);
extern "C" DECL_EXPORT void V3dViewer_Dtor(void* instance);