Lib/AlternateWrapper/NaroOccCore/NaroOccCore-build-desktop/Occ/V3d/V3dViewer.cs

		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_Viewer_DefaultComputedMode(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_Viewer_IsActive(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_Viewer_Grid(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int V3d_Viewer_GridType(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern int V3d_Viewer_GridDrawMode(IntPtr instance);

		#region NativeInstancePtr Convert constructor

		public V3dViewer() { } 

		public V3dViewer(IntPtr instance) : base(instance) { } 

		protected override void DeleteSelf()
		{
            try
            {
                V3dViewer_Dtor(Instance);
            }
            catch
            {
            }
		}

		#endregion

		[DllImport("NaroOccCore.dll")]
		private static extern void V3dViewer_Dtor(IntPtr instance);
	}
}
